; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_path_get_user_slice.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_path_get_user_slice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"/user.slice\00", align 1
@ENXIO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"/foobar\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"/user.slice/user-waldo.slice\00", align 1
@.str.3 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"foobar\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"foobar.slice\00", align 1
@.str.6 = private unnamed_addr constant [38 x i8] c"foo.slice/foo-bar.slice/waldo.service\00", align 1
@.str.7 = private unnamed_addr constant [42 x i8] c"foo.slice/foo-bar.slice/user@1000.service\00", align 1
@SPECIAL_ROOT_SLICE = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [43 x i8] c"foo.slice/foo-bar.slice/user@1000.service/\00", align 1
@.str.9 = private unnamed_addr constant [45 x i8] c"foo.slice/foo-bar.slice/user@1000.service///\00", align 1
@.str.10 = private unnamed_addr constant [56 x i8] c"foo.slice/foo-bar.slice/user@1000.service/waldo.service\00", align 1
@.str.11 = private unnamed_addr constant [65 x i8] c"foo.slice/foo-bar.slice/user@1000.service/piep.slice/foo.service\00", align 1
@.str.12 = private unnamed_addr constant [11 x i8] c"piep.slice\00", align 1
@.str.13 = private unnamed_addr constant [84 x i8] c"/foo.slice//foo-bar.slice/user@1000.service/piep.slice//piep-pap.slice//foo.service\00", align 1
@.str.14 = private unnamed_addr constant [15 x i8] c"piep-pap.slice\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_path_get_user_slice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_path_get_user_slice() #0 {
  %1 = load i32, i32* @ENXIO, align 4
  %2 = sub nsw i32 0, %1
  %3 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %2, i8* null)
  %4 = load i32, i32* @ENXIO, align 4
  %5 = sub nsw i32 0, %4
  %6 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %5, i8* null)
  %7 = load i32, i32* @ENXIO, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i32 %8, i8* null)
  %10 = load i32, i32* @ENXIO, align 4
  %11 = sub nsw i32 0, %10
  %12 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.3, i64 0, i64 0), i32 %11, i8* null)
  %13 = load i32, i32* @ENXIO, align 4
  %14 = sub nsw i32 0, %13
  %15 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 %14, i8* null)
  %16 = load i32, i32* @ENXIO, align 4
  %17 = sub nsw i32 0, %16
  %18 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i32 %17, i8* null)
  %19 = load i32, i32* @ENXIO, align 4
  %20 = sub nsw i32 0, %19
  %21 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.6, i64 0, i64 0), i32 %20, i8* null)
  %22 = load i8*, i8** @SPECIAL_ROOT_SLICE, align 8
  %23 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.7, i64 0, i64 0), i32 0, i8* %22)
  %24 = load i8*, i8** @SPECIAL_ROOT_SLICE, align 8
  %25 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.8, i64 0, i64 0), i32 0, i8* %24)
  %26 = load i8*, i8** @SPECIAL_ROOT_SLICE, align 8
  %27 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.9, i64 0, i64 0), i32 0, i8* %26)
  %28 = load i8*, i8** @SPECIAL_ROOT_SLICE, align 8
  %29 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.10, i64 0, i64 0), i32 0, i8* %28)
  %30 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.11, i64 0, i64 0), i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.12, i64 0, i64 0))
  %31 = call i32 @check_p_g_u_slice(i8* getelementptr inbounds ([84 x i8], [84 x i8]* @.str.13, i64 0, i64 0), i32 0, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.14, i64 0, i64 0))
  ret void
}

declare dso_local i32 @check_p_g_u_slice(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
